--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                 <p>Chihiro e seus pais estão se mudando para uma cidade diferente. A caminho da nova casa, o pai decide pegar um atalho. Eles se deparam com uma mesa repleta de comida, embora ninguém esteja por perto. Chihiro sente o perigo, mas seus pais começam a comer</p>
        
                 <div id="btn">
-                    <a href="#" class="Ag"></i><em>Assistir</em></a>
-                    <a href="#" class="At"><em>Trailer</em></a>
+                    <a href="#btn" class="Ag"></i><em>Assistir</em></a>
+                    <a href="#btn" class="At"><em>Trailer</em></a>
                 </div>
        
             </div>
